# express

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh  setup.cfg  setup.py  test-parse-aiida-archive.py
.github/workflows/: cicd.yml  python-package-tests.yml  python-publish.yml
express/: __init__.py  _version.py  mixins.py  settings.py
express/parsers/: __init__.py  basis.py  crystal.py  exabyteml.py  factory.py  molecule.py  pymatgen.py  pymatgen_parser.py  settings.py  structure.py  structure_id.py  utils.py
express/parsers/apps/: pymatgen_parser.py
express/parsers/apps/aiida/: parser.py  settings.py
express/parsers/apps/espresso/: parser.py  pw_input_file.py  settings.py
express/parsers/apps/nwchem/: parser.py  settings.py
express/parsers/apps/vasp/: parser.py  settings.py
express/parsers/formats/: jsonfile.py  txt.py  xml.py  zip.py
express/parsers/mixins/: electronic.py  exabyteml.py  ionic.py  reciprocal.py
express/properties/: __init__.py  factory.py  material.py  settings.py  utils.py  workflow.py
express/properties/convergence/: electronic.py  ionic.py
express/properties/non_scalar/: __init__.py  atomic_constraints.py  atomic_forces.py  averaged_potential.py  bandgaps.py  basis.py  dielectric_tensor.py  file_content.py  formation_energy_references.py  hubbard_parameters.py  hubbard_u.py  hubbard_v.py  hubbard_v_nn.py  inchi.py  inchi_key.py  lattice.py  magnetic_moments.py  space_group_symbol.py  stress_tensor.py  symmetry.py  total_energy_contributions.py
express/properties/non_scalar/two_dimensional_plot/: __init__.py  average_potential_profile.py  averaged_potential_profile.py  band_structure.py  charge_density_profile.py  density_of_states.py  phonon_dispersions.py  phonon_dos.py  potential_profile.py  reaction_energy_profile.py  wavefunction_amplitude.py
express/properties/scalar/: __init__.py  density.py  elemental_ratio.py  fermi_energy.py  homo_energy.py  lumo_energy.py  molecular_weight.py  p_norm.py  pressure.py  reaction_energy_barrier.py  scalar_property_context.py  surface_energy.py  symmetry_symbol_point_group.py  symmetry_symbol_space_group.py  thermal_correction_to_energy.py  thermal_correction_to_enthalpy.py  total_energy.py  total_force.py  volume.py  zero_point_energy.py
express/properties/structural/: centered_basis.py  inchi.py  inchi_key.py  molecular_weight.py  molecule_max_radii.py  n_atoms.py  point_group_symmetry.py  space_group_symmetry.py  symmetry_symbol_point_group.py  symmetry_symbol_space_group.py
src/parsers/apps/: __init__.py
src/parsers/apps/espresso/: parser.py
src/parsers/apps/vasp/: parser.py
tests/: .gitattributes  __init__.py  data.tgz  manifest.yaml  settings.py
tests/fixtures/: data.py  h2o.xyz
tests/fixtures/espresso/: legacy_references.py  references.py
tests/fixtures/espresso/test-001/: pw-vc-relax.out  run.sh
tests/fixtures/espresso/test-002/: __prefix__.pdos_atm#1(Si)_wfc#1(s)  __prefix__.pdos_atm#2(Si)_wfc#2(p)  projwfc.in  pw-bands.in  pw-bands.out  pw-nscf.out  pw-scf.in  pw-scf.out  run.sh
tests/fixtures/espresso/test-003/: phonon_dos.out
tests/fixtures/espresso/test-004/: __prefix__.xml
tests/fixtures/espresso/v5_4/: references.py
tests/fixtures/espresso/v6_5/: references.py
tests/fixtures/espresso/v7_2/: references.py
tests/fixtures/nwchem/: __init__.py  references.py
tests/fixtures/nwchem/test-001/: .gitattributes  run.sh  (+6 more)
tests/fixtures/pyML/: data.py
tests/fixtures/structural/: references.py
tests/fixtures/vasp/: references.py
tests/integration/: __init__.py
tests/integration/parsers/: test_basis.py  test_crystal.py  test_molecule.py  test_pymatgen.py  test_structure.py
tests/integration/properties/: test_material.py
tests/pyML/test-001/: workflow_predict_after_conversion.JSON  workflow_train.JSON
tests/unit/: __init__.py
tests/unit/parsers/: test_structure_parser.py
tests/unit/properties/: raw_data.py
(+256 files in other folders)
