[project]
name = "express-py"
dynamic = ["version"]
description = "EXcellent PRoperty Extractor and Serializer."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
authors = [
    { name = "Exabyte Inc.", email = "info@mat3ra.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development",
]
dependencies = [
    "munch==2.5.0",
    "pymatgen>=2023.8.10",
    "ase>=3.17.0",
    "mat3ra-esse>=2024.1.25.post7",
    "rdkit-pypi>=2022.3.5",
    "jarvis-tools>=2023.12.12",
]

[project.optional-dependencies]
tests = [
    "coverage[toml]>=5.3",
]
all = ["express-py[tests]"]

[tool.coverage.run]
source = ['.']
omit = ['env*/*', 'venv*/*', 'tests/*']

# Entrypoint scripts can be defined here, see examples below.
[project.scripts]
# my-script = "my_package.my_module:my_function"

[build-system]
requires = [
    "setuptools>=42",
    "setuptools-scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
git_describe_command = "git describe --tags --long"
# Consider the below to allow for versions like 2024.1.25.post5.dev1'
# https://github.com/pypa/setuptools_scm/issues/342#issuecomment-1233118020
# This won't require a git tag to be present before each publish.
# See https://github.com/Exabyte-io/actions/blob/main/py/publish/action.yml#L47 also.
# local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",
    "tests.*",
]

[tool.black]
line-length = 120
target-version = ['py38']
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
    examples\/.*\/.*\.py
  | other\/.*\/.*\.(py|ipynb)
)
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "src/js",
    "tests/js"
]
line-length = 120
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
