[metadata]
name = express-py
author = Exabyte Inc.
author_email = info@exabyte.io
description = Exabyte Property Ex(ss)tractor, Sourcer, Serializer class.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Exabyte-io/exabyte-express
classifiers =
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.6
install_requires =
    munch==2.5.0
    pymatgen==2020.4.29
    ase==3.17.0
    esse>=2020.10.19
    rdkit-pypi==2021.3.3

[options.extras_require]
test =
    coverage[toml]>=5.3
    mock>=1.3.0
    pyyaml>=4.2b1,<6

[options.packages.find]
where = .
exclude =
    tests
    tests.*

