[metadata]
name = express-py
author = Exabyte Inc.
author_email = info@exabyte.io
description = Exabyte Property Ex(ss)tractor, Sourcer, Serializer class.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Exabyte-io/exabyte-express
classifiers =
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.6

# # Numpy 1.24.X causes - AttributeError: module 'numpy' has no attribute 'typeDict' - error
install_requires =
    munch==2.5.0
    pymatgen==2023.7.14
    ase==3.17.0
    esse>=2020.10.19
    rdkit-pypi>=2022.3.5

[options.extras_require]
test =
    coverage[toml]>=5.3
    pyyaml>=4.2b1,<6

[options.packages.find]
where = .
exclude =
    tests
    tests.*
